<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <com.alim.letscode.Class.CircleImageView
            android:id="@+id/profile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="20dp"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/colorWhite"
            android:src="@drawable/person"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textSize="20sp"
            android:fontFamily="@font/inter_light"
            android:textColor="#FFFFFF"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="top"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="8dp"
            android:text="@string/alim_sourav"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!--<ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="100dp"
            android:textColor="@color/colorWhite"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_height="35dp"
            android:textOff="@string/dark"
            android:textOn="@string/light"
            android:background="#4BFFFFFF"/> -->

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="5dp"
                android:layout_marginTop="15dp"
                android:elevation="5dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/code_with_c"
                        android:textColor="?attr/BlackWhite"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:id="@+id/c_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total video : 176"
                        android:textSize="15sp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="35dp"/>

                    <Button
                        android:id="@+id/c_contin"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:layout_gravity="end"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycle_c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="60dp" />

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="5dp"
                android:elevation="5dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/code_with_c_p"
                        android:textColor="?attr/BlackWhite"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:id="@+id/c_p_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total video : 149"
                        android:textSize="15sp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="35dp"/>

                    <Button
                        android:id="@+id/c_p_contin"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="@string/start"
                        android:layout_gravity="end"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycle_c_p"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="60dp" />

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="5dp"
                android:elevation="5dp">

                <com.google.android.ads.nativetemplates.TemplateView
                    android:id="@+id/my_template"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    app:gnt_template_type="@layout/gnt_medium_template_view" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="5dp"
                android:elevation="5dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/code_with_java"
                        android:textColor="?attr/BlackWhite"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:id="@+id/j_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total video : 92"
                        android:textSize="15sp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="35dp"/>

                    <Button
                        android:id="@+id/j_contin"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="@string/start"
                        android:layout_gravity="end"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycle_j"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="60dp" />

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="5dp"
                android:elevation="5dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/code_with_python"
                        android:textColor="?attr/BlackWhite"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:id="@+id/p_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total video : 110"
                        android:textSize="15sp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="35dp"/>

                    <Button
                        android:id="@+id/p_contin"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="@string/start"
                        android:layout_gravity="end"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycle_p"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="60dp" />

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="5dp"
                android:elevation="5dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/code_with_kotlin"
                        android:textColor="?attr/BlackWhite"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:id="@+id/k_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total video : 47"
                        android:textSize="15sp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="35dp"/>

                    <Button
                        android:id="@+id/k_contin"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="@string/start"
                        android:layout_gravity="end"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycle_k"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="60dp" />

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="5dp"
                android:elevation="5dp">

                <com.google.android.ads.nativetemplates.TemplateView
                    android:id="@+id/my_template2"
                    app:gnt_template_type="@layout/gnt_medium_template_view"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="match_parent" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>